# full_dia

./: .gitignore  README.md  pyproject.toml
environment/: environment_cuda12.yml
full_dia/: calib.py  cfg.py  cross.py  decoy.py  deepmall.py  deepmap.py  fdr.py  fxic.py  log.py  main.py  main_core.py  param_g.py  polish.py  quant.py  refine.py  scoring.py  search.py  utils.py
full_dia/cfg/: default.yaml
